# cg2

./: CMakeLists.txt  ExemploDeManipulacaoDeImagens.cpp  Imagens  Imagens.depend  Imagens.layout  README.md
